Se crea el navbar de la página.

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>E & E Agencia de Seguros</title>
-  <base href="/">
+  <meta name="author" content="Juan Camilo Salazar Rojas">
+  <meta name="description" content="Portafolio de seguros de EyE Asesores de seguros">
+  <meta name="keyworks" content="Seguros, Seguros de vida, Seguros generales, Seguros para mascotas, Seguros de salud, Seguros internacionales">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/logo.png">
+  <base href="/">
+  <title>E & E | Agencia de Seguros</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
 </head>
 <body>
   <app-root></app-root>
