Se agrega libreria icons Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
-    <title>DRYME - Free Laundry Service Website Template</title>
+    <title>E & E Asesores de Seguros</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/NUEUVO%20LOGO_SIN%20BORDES.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,6 +23,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -30,30 +31,18 @@
     <div class="container-fluid bg-primary py-3">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
+                <div class="col-md-12 text-right text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-white pr-3" href="">FAQs</a>
-                        <span class="text-white">|</span>
-                        <a class="text-white px-3" href="">Help</a>
-                        <span class="text-white">|</span>
-                        <a class="text-white pl-3" href="">Support</a>
-                    </div>
-                </div>
-                <div class="col-md-6 text-center text-lg-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="https://www.facebook.com/EyEseguros"  target="_blank">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="https://www.linkedin.com/company/eye-asesores-de-seguros/?viewAsMember=true" target="_blank">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="http://instagram.com/eyeseguros" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="text-white pl-3" href="">
+                        <a class="text-white pl-3" href="https://www.youtube.com/@EyESeguros"  target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -68,28 +57,21 @@
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-secondary"><span class="text-primary">DRY</span>ME</h1>
+                <a href="" class="navbar-brand text-center">
+                    <h1>Euyenid & Edder</h1> <h3 class="">Asesores de seguros</h3>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link">Pricing</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                            </div>
+                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="about.html" class="nav-item nav-link">Sobre Nosotros</a>
+                        <a href="service.html" class="nav-item nav-link">Nuestros Servicios</a>
+                        <a href="blog.html" class="nav-item nav-link">Seguros</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                </div>
             </nav>
         </div>
     </div>
@@ -101,22 +83,32 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/seguro%20de%20vida.avif" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Laundry & Dry Cleaning</h4>
-                            <h1 class="display-3 text-white mb-md-4">Best For Laundry Services</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
+                            <h4 class="text-white text-uppercase mb-md-3">Conoce nuestro</h4>
+                            <h1 class="display-3 text-white mb-md-4">PORTAFOLIO DE VIDA</h1>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Conoce más aquí</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/seguro%20de%20vivienda.avif" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h4 class="text-white text-uppercase mb-md-3">Laundry & Dry Cleaning</h4>
-                            <h1 class="display-3 text-white mb-md-4">Highly Professional Staff</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
+                            <h4 class="text-white text-uppercase mb-md-3">Tu hogar, tu refugio</h4>
+                            <h1 class="display-3 text-white mb-md-4">TRANQUILIDAD EN TODO MOMENTO</h1>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Conoce más aquí</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/seguro%20pyme.avif" alt="Image">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h4 class="text-white text-uppercase mb-md-3">Protege el corazón de tu negocio </h4>
+                            <h1 class="display-3 text-white mb-md-4">SEGURO PYME</h1>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Conoce más aquí</a>
                         </div>
                     </div>
                 </div>
@@ -144,8 +136,8 @@
                     <div class="d-inline-flex">
                         <i class="fa fa-2x fa-map-marker-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="text-white font-weight-medium">Our Location</h5>
-                            <p class="m-0 text-white">123 Street, New York, USA</p>
+                            <h5 class="text-white font-weight-medium">Nuestra ubicación</h5>
+                            <p class="m-0 text-white"> Carrera 14b #148-24 Bogotá Cedritos</p>
                         </div>
                     </div>
                 </div>
@@ -153,8 +145,9 @@
                     <div class="d-inline-flex text-left">
                         <i class="fa fa-2x fa-envelope text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="text-white font-weight-medium">Email Us</h5>
-                            <p class="m-0 text-white">info@example.com</p>
+                            <h5 class="text-white font-weight-medium">Nuestro Email</h5>
+                            <p class="m-0 text-white">euyenidyaver@eyeseguros.com</p>
+                            <p class="m-0 text-white">edderrojas@eyeseguros.com</p>
                         </div>
                     </div>
                 </div>
@@ -162,8 +155,9 @@
                     <div class="d-inline-flex text-left">
                         <i class="fa fa-2x fa-phone-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
-                            <h5 class="text-white font-weight-medium">Call Us</h5>
-                            <p class="m-0 text-white">+012 345 6789</p>
+                            <h5 class="text-white font-weight-medium">Llámanos</h5>
+                            <p class="m-0 text-white">(315) 3060894</p>
+                            <p class="m-0 text-white">(315) 3316809</p>
                         </div>
                     </div>
                 </div>
@@ -178,36 +172,36 @@
         <div class="container pt-0 pt-lg-4">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/about.jpg" alt="">
+                    <img class="img-fluid" src="img/manos-sosteniendo-gente-papel-corazon-cerca_23-2149191352%20(1).avif" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
-                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
-                    <h1 class="mb-4">We Are Quality Laundry Provider In Your City</h1>
-                    <h5 class="font-weight-medium font-italic mb-4">Clita sit et ipsum sed. Volup duo sea dolor rebum ea rebum kasd stet. Dolor at duo dolor sit stet.</h5>
-                    <p class="mb-2">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos, ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est dolor</p>
+                    <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Te brindamos una asesoría integral</h6>
+                    <h1 class="mb-4">Somos agentes de seguros</h1>
+                    <h5 class="font-weight-medium font-italic mb-4">Nuestro compromiso es proteger lo más valioso para ti. </h5>
+                    <p class="mb-2"> Te ofrecemos lo siguiente:</p>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Quality Laundry Service</p>
+                                <p class="text-secondary font-weight-medium m-0">Servicio de calidad</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Express Fast Delivery</p>
+                                <p class="text-secondary font-weight-medium m-0">Amplio portafolio en seguros</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Highly Professional Staff</p>
+                                <p class="text-secondary font-weight-medium m-0">Asesoría especializada</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">100% Satisfaction Gguarantee</p>
+                                <p class="text-secondary font-weight-medium m-0">100% de Satisfacción</p>
                             </div>
                         </div>
                     </div>
@@ -221,15 +215,15 @@
     <!-- Services Start -->
     <div class="container-fluid pt-5 pb-3">
         <div class="container">
-            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Our Services</h6>
-            <h1 class="display-4 text-center mb-5">What We Offer</h1>
+            <h6 class="text-secondary text-uppercase text-center font-weight-medium mb-3">Nuestros servicios</h6>
+            <h1 class="display-4 text-center mb-5">¿QUÉ OFRECEMOS?</h1>
             <div class="row">
                 <div class="col-lg-3 col-md-6 pb-1">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
                         <div class="d-inline-flex align-items-center justify-content-center bg-white shadow rounded-circle mb-4" style="width: 100px; height: 100px;">
-                            <i class="fa fa-3x fa-cloud-sun text-secondary"></i>
+                            <i class="bi bi-clipboard2-heart-filll text-secondary"></i>
                         </div>
-                        <h4 class="font-weight-bold m-0">Dry Cleaning</h4>
+                        <h4 class="font-weight-bold m-0">Seguros de vida</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 pb-1">
